[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Tyler Irving <tyler@lightmatter.com>"]
readme = "README.md"
packages = [{include = "todo_app"}]

[tool.poetry.dependencies]
python = "^3.10"
pyvibe = "^0.0.5"
flask = "^2.3.2"
openai = "^0.27.7"
redis = "^4.5.5"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
